# ajisai

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yaml  readme.md
.sqlx/: query-13d6856e4b12b65c0f374741337e18936617cfe76688ffa5db24b4a9f049a9a7.json
migrations/: 001_create_key_value.sql  20240823090011_sena_ajisai.sql
src/: database.rs  db.rs  main.rs
src/handlers/: mod.rs  root.rs  user_handler.rs  webhook.rs
src/models/: user.rs
src/services/: user_service.rs
src/utils/: utility.rs
