[package]
name = "ajisai"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
sqlx = { version = "0.8", features = [ "postgres" ,"runtime-tokio", "tls-native-tls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
passwords = "3.1.16"
