[package]
name = "ajisai"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros"] }
uuid = { version = "1", features = ["v4"] }
